# agentty

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  clippy.toml  dist-workspace.toml  sonar-project.properties
.codex/: AGENTS.md
.config/: nextest.toml
.github/: AGENTS.md  dependabot.yml
.github/workflows/: AGENTS.md  pages.yml  postsubmit.yml  presubmit.yml  publish-crates-io.yml  publish-npm-oidc.yml  release-checks.yml  release.yml  security-scan.yml  tui-e2e.yml  zizmor.yml
crates/: AGENTS.md
crates/ag-cli/: AGENTS.md  Cargo.toml
crates/ag-forge/: AGENTS.md  Cargo.toml
crates/ag-forge/src/: AGENTS.md  client.rs  command.rs  github.rs  gitlab.rs  lib.rs  model.rs  remote.rs
crates/ag-tui-test/: AGENTS.md  Cargo.toml  README.md
crates/ag-xtask/: AGENTS.md  Cargo.toml
crates/agentty/: AGENTS.md  Cargo.toml  askama.toml
crates/am-cli/: Cargo.toml  GEMINI.md
crates/testty/: AGENTS.md  Cargo.toml  README.md
crates/testty-cli/: AGENTS.md  Cargo.toml  README.md
crates/testty-cli/src/: main.rs
crates/testty/docs/: README.md  assertions.md  examples.md  frame-diffing.md  getting-started.md  journeys.md  proof-pipeline.md  scenarios-yaml.md  scenarios.md  snapshots.md  upgrading.md
crates/testty/examples/: AGENTS.md  journey_composition.rs  proof_pipeline.rs
crates/testty/src/: assertion.rs  diff.rs  feature.rs  frame.rs  journey.rs  lib.rs  main.rs  prelude.rs  proof.rs  recipe.rs  renderer.rs  scenario.rs  session.rs  snapshot.rs  spec.rs  step.rs  vhs.rs
crates/testty/src/proof/: AGENTS.md  backend.rs  frame_text.rs  gallery.rs  gif.rs  html.rs  junit.rs  report.rs  strip.rs
crates/testty/src/spec/: model.rs  runtime.rs
crates/testty/tests/: public_api.rs
docs/: AGENTS.md
docs/assets/: AGENTS.md
docs/plan/: AGENTS.md  CLAUDE.md  beautiful_ui.md  continue_in_progress_sessions_after_exit.md  coverage_follow_up.md  draft_session_prompt_collection.md  end_to_end_test_structure.md  forge_review_request_support.md  local_agent_availability.md  meta_agent_prompt_templates.md  prompt_image_paste.md  protocol_request_instructions.md  roadmap.md  session_commit_message_flow.md  session_execution_backends.md  session_in_progress_timer.md  sqlx_query_as_db.md  test_coverage.md  (+2 more)
pr-testing/: README.md
skills/: AGENTS.md
(+533 files in other folders)
