[package]
name = "ag-forge"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
test-utils = ["dep:mockall"]

[dependencies]
mockall = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
mockall.workspace = true

[lints]
workspace = true
