[package]
name = "testty"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust-native TUI end-to-end testing framework using PTY-driven semantic assertions, native frame rendering, and VHS-driven GIF capture."
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["tui", "testing", "e2e", "pty", "ratatui"]
categories = ["development-tools::testing", "command-line-interface"]
include = [
  "src/**/*",
  "examples/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
]

[package.metadata.dist]
# Publish the npm installer under the Agentty org scope while keeping the Cargo
# crate and installed binary named `testty`.
npm-scope = "@agentty-xyz"

[lints]
workspace = true

[dependencies]
base64.workspace = true
clap.workspace = true
image.workspace = true
portable-pty.workspace = true
serde.workspace = true
serde_yaml_ng.workspace = true
tempfile.workspace = true
thiserror.workspace = true
unicode-width.workspace = true
vt100.workspace = true
